server/compilers/goLiteJS/src/test/ml1/invalid/slice9.go
// missing left bracket in slice declaration
package main

var x ]int
